[package]
name = "cyclic-ca"
version = "0.13.0"
edition = "2021"
description = "Cyclic Cellular Automata simulation"
authors = ["pedawson"]

[dependencies]
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
]}
egui = "0.29"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
log = "0.4"
